examples/test/testpolicy12815.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12815
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key48: value12
      key11: value17
      key21: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value38
      podSelector:
        matchLabels:
          key21: value4
          key42: value41
          key39: value1
